assets/css/style.css
body {

    margin: 0;
    border: 0;
    padding: 0;
}
/*-----------------------Header----*/

.logo {
    height: 100px;
    width: 100px;
    background-image: url("../images/logo2.jpg");
    background-repeat: no-repeat;
}

.navbar {
    text-align: right;
    position: fixed;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: justify;
    justify-content: space-between;
    padding: 0 1rem;
    background-color: rgb(217, 240, 255);
}

.navbar-nav .nav-link {
    padding-right: 8px;
    padding-left: 0;
}

.navbar-brand {
    display: inline-block;
    padding-top: .15rem;
    padding-bottom: 0.15rem;
    margin-right: 1rem;
    font-size: 1.25rem;
    line-height: inherit;
    white-space: nowrap;
}
  




.nav-link {
    display: block;
    
    
}

.nav-link-signup {
    color:#fff !important;
    padding-top: 0.375em;
   
}

ul li a {
    width: auto;
    color: #fff;
    padding-bottom: 0.6rem;
    padding-left: 0.6rem!important;
    padding-right: 0.6rem;
    
}

ul li p {
    width: auto;
    
}

.container-fluid {
    padding: 0;
   
}

li p {
    display: block;
    margin-block-start: 0;
    margin-block-end: 0;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

li p:hover {
    cursor: pointer;
}

.btn {
    display: inline-block;
    font-weight: 400; 
    color: #fff; 
    text-align: center; 
    vertical-align: middle; 
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    padding: 0;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: .25rem;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
    margin-bottom: 2.4px;
}

.btn-signup {
    background-color: rgb(1, 1, 173);
    border: 1px solid rgb(1, 1, 173);
}

.btn-signup:hover {
    background-color: darkblue;
    border: 1px solid darkblue;
    
}

    
/*----------------------Footer-----*/

.footer {
    height: 100px;
    background-color:rgb(217, 240, 255);
    bottom: 0;
    left: 0;
    right: 0;
    margin-bottom: 0;
    position: relative;
}

.social-wrapper {
    height: inherit;
}

.social-header {
     background-color: rgb(217, 240, 255);
     text-align: center;
     padding-top: 5px;
     letter-spacing: 2px;
     font-weight: bold;
}

.social-header h5{
     background-color: rgb(217, 240, 255);
     text-align: center; 
     margin: 0;  
}

.social-list {
    text-align: center;
    background-color: rgb(217, 240, 255);
    height: 74px;
}

.social-list ul {
    padding: 0;
    margin: 0;
    height: 74px;
    margin: 0 auto;
}

.social-list li {
    height: 74px;
    padding-top: 17px;
}

.social-list ul li a {
    padding-bottom: 0;
    padding-left: 0.8rem;
}

.social-list ul li a:hover {
    padding-bottom: 0;
    padding-left: 0.8rem;
    text-decoration: none;
}


.row {
    margin:0;
}

.fab {
    color: black;
}



li {
    list-style-type: none;
    text-decoration: none;
}
/*----------------------Index-----*/




/*-----------------------Index Section carousel----*/

.carousel-section {
    padding-top: 57px;
}

.carousel-item {
   height: 500px;
}

.carousel-item img {
    position: absolute;
    object-fit: cover;
    top: 0;
    left: 0;
    height: 600px;
    
}

/*.carousel-img-1 {     -------------------Move to media query---
    padding-bottom: 250px;
    
}*/






.carousel-caption-edit-picture1 {
    position: absolute;
    top: 20px; /*Put this padding in the media query - padding: top 20px right 0px;*/
    right: 5px;
    z-index: 10;
    padding: 20px 20px 20px; 
    color: black;
    text-align: center;
    background-color: rgba(170, 170, 170, 0.6);
}

.carousel-caption-edit-picture2 {
   position: absolute;
    top: 20px;
    right: 5px;
    z-index: 10;
    padding: 20px 20px 20px;
    color: black;
    text-align: center;
    background-color: rgba(170, 170, 170, 0.6);
    
}

.carousel-caption-edit-picture3 {
    position: absolute;
    top: 20px;
    right: 5px;
    z-index: 10;
    padding: 20px 20px 20px;
    color: black;
    text-align: center;
    background-color: rgba(170, 170, 170, 0.6);
}

.carousel-caption-color h5, .carousel-caption-color p {
    padding-bottom: 0;
    color: #fff;
    margin: 0;
}

/*---Index About----*/

.about {
    margin-bottom: 0;
    background-color:#fff;


}

.about-image-container1 {
    padding-top:30px;
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 30px;
}

.about-image-container2 {
    padding-top:0;
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 30px;
}

.about-image {
    overflow: hidden;
    object-fit: cover;
    width: 100%;
    height: 300px;
}

.about-text-container1 {
    padding-top:0;
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 30px;
 
}

.about-text-container2 {
    padding-top:0;
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 30px;
 
}
.about-text {
    background-color:rgb(112, 176, 219);
    height:300px;
    padding: 20px;
    overflow: hidden;
    color:black;
  
    
}

/*media query 1
.about-image-container1 {
    padding-top:30px;
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 20px;
}

.about-image-container2 {
    padding-top:0;
    padding-bottom: 30px;
    padding-right: 20px;
    padding-left: 30px;
}

.about-text-container1 {
    padding-top:30px;
    padding-bottom: 0;
    padding-right: 20px;
    padding-left: 0;
 
}

.about-text-container2 {
    padding-top:0;
    padding-bottom: 30px;
    padding-right: 0;
    padding-left: 20px;
 
}

*/

/*----------------------------------------------------------Why not pop in?-----*/

.visit {
    background-color: #eceff1;
    color: black;
}

.visit-header {
    text-align: center;
    font-weight: 700;
    padding: 10px 30px 0px 30px;
}

.visit-header p {
    text-align: center;
    font-weight: 400;
    font-size: 1.2rem;
    padding: 10px 30px 0px 30px;
    margin: 0;

}

.next-meeting-wrapper {
    padding-left: 30px;
    padding-right: 30px;
    margin-top: 30px;
}

.next-meeting-wrapper-last {
    margin-bottom: 30px;
}

.next-meeting-pic {
    background-image: url("../images/test.jpg");
    background-size: cover;
   
}

.next-meeting-info {
    color: #fff;
    text-align: center;
    background-color: rgba(170, 170, 170, 0.4);
    font-weight: 600;
    padding: 20px 20px;
}

.visit-title {
    text-decoration: underline;
    padding-bottom: 10px;
}

.next-meeting-info p {
    margin: 0;
}

/*---Pricing-----*/



.card-bronze {
    
    position: relative;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: #fff;
    background-clip: border-box;
    border: 1px solid #cd7f32;
    border-top-left-radius: 0.25rem;
    border-top-left-radius: 0.25rem;

}

.card-silver {
    position: relative;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: #fff;
    background-clip: border-box;
    border: 1px solid silver;
    border-top-left-radius: 0.25rem;
    border-top-left-radius: 0.25rem;
}

.card-gold {
    position: relative;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: #fff;
    background-clip: border-box;
    border: 1px solid gold;
    border-top-left-radius: 0.25rem;
    border-top-left-radius: 0.25rem;
}


.card-wrapper {
    text-align: center;
    
    
}

.card-body {
    text-align: left;
    padding: 30px 20px!important;
    
}

.card-body ul {
    margin-bottom: 0;
}

.card-text {
    list-style-type: disc;
    
    
}



.bronze-membership {
    background-color:#fff;
    margin-top: 0 ;
    margin-bottom: 20px;
    display: inline-block;
    width: 100%;
}

.silver-membership {
    background-color: #fff;
    margin-top: 0;
    margin-bottom: 20px;
    display: inline-block;
    width: 100%;
}

.gold-membership {
    background-color:#fff;
    margin-top: 20px;
    margin-bottom: 20px;
    display: inline-block;
    width: 100%;
}



.membership-card-header-gold {
    background-color: gold;
    background-clip: border-box;
    border-top-left-radius: 0.25rem;
    border-top-left-radius: 0.25rem;
    height: 50px;
}

.membership-card-header-silver {
    background-color:silver;
    background-clip: border-box;
    border-top-left-radius: 0.25rem;
    border-top-left-radius: 0.25rem;
    height: 50px;
}

.membership-card-header-bronze {
    background-color: #cd7f32;
    background-clip: border-box;
    border-top-left-radius: 0.25rem;
    border-top-left-radius: 0.25rem;
    height: 3.125rem;
    margin: 0;
}

.membership-card-header-bronze h3, .membership-card-header-silver h3, .membership-card-header-gold h3 {
    padding-top: 5px;
    padding-bottom: 5px;
    margin: 0;
}
  

.card p {
    margin-bottom: 0;
}

.card-footnote {
    padding-left: 40px;
}




/*----------------------Meetings-----*/
.location-information{
    padding-top:79px;
}

.location-header {
    text-align: center;
    border: 1px solid black;
    margin-top: 10px;
}

.location-picture {
    border: 1px solid black;
}



.information-grid {
    padding-left: 0;
    padding-right: 0;
}

.information-manchester {
    border: 1px solid black;

}

.information-york {
    border: 1px solid black;

}
.information-leeds {
    border: 1px solid black;

}
.information-cambridge {
    border: 1px solid black;

}
.information-nottingham {
    border: 1px solid black;

}

p.padding {
    padding-left: 5px;
}

/*----------------------Sign-Up-----*/

.signup-containter {
text-align: center;

}

.member-col-10 {
    padding-left: 0px;
}

.container-signup{
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;  
}
    
.container-membership {
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;

}




/*----------------------Members-----*/



.members {
        padding-top: 79px;
        height: 60vh;

    }

/*----------------------Contact Us-----*/
.contact-list{
     padding-left: 5%;
     text-align: center;
}

